2010-02-16  Petr Ovtchenkov  <ptr@void-ptr.info>

	* casual.cc: remove access points, if
	appropriate object leave group;

	* casual.h, casual.cc: copy access points
	from one object to another; copy only 'own'
	access points;

	* libjanus: revision 0.14.5.

2010-02-10  Petr Ovtchenkov  <ptr@void-ptr.info>

	* casual.cc: check nodes accessibility in
	group during process join request;
	repeate join request, if initial request come
	when node was in locked state;

	* libjanus: revision 0.14.4.

2010-02-04  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.cc: process closed connection, initiate
	view update;

	* torder.cc: try to detect leader failure;
	elect new leader, if current leader fail
	detected;
	
	* libjanus: revision 0.14.3.

2010-02-03  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.cc: sefault VS lock timeout increased
	from 200 ms to 20 sec;

	* torder.cc: pass address of origin to delayed
	event too;
	
	* libjanus: revision 0.14.2.

2010-02-01  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.cc: check and try to process delayed
	events after pop locked state;

	* torder.cc: if event was delayed, don't
	process it on leader side too;

	* torder.cc: set source and destination for
	event before pass it to VS processing
	on leader side;

	* libjanus: revision 0.14.1.

2010-01-28  Petr Ovtchenkov  <ptr@void-ptr.info>

	* torder.h, torder.cc: virtual synchrony
	with total order of events [aka ABCAST]
	implementation;

	* libjanus: revision 0.14.0.

2010-01-25  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.h, vtime.cc: two variants of virtual
	synchrony event initiation; vs() with Dispatch
	event to self and vs_aux()---without Dispatch
	events to self [i.e. caller responsible for
	processing on origin node];

	* vtime.h, vtime.cc: don't distinguish recording
	for original/derivative events recording; use
	one function vs_pub_rec instead of two;

	* libjanus: revision 0.13.0.

2010-01-21  Petr Ovtchenkov  <ptr@void-ptr.info>
